Add Billing Postcode and Billing State to Customer (Account) Detail #10739

--- a/public/admin/assets/views/customer-detail.html
+++ b/public/admin/assets/views/customer-detail.html
@@ -123,6 +123,22 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
+                                                    <td>Billing Postcode:</td>
+                                                    <td>
+                                                        <div>
+                                                            {{customer.billing.details.zip}}
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Billing State:</td>
+                                                    <td>
+                                                        <div>
+                                                            {{customer.billing.details.state}}
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
                                                     <td>Template Account:</td>
                                                     <td>
                                                         <div ng-show="customer">
