Contact Detail - missing border #10742

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -290,6 +290,8 @@ contact-details-component{
     .contact-details-right-pane{
         background: #FCFAFD;
         padding-left: 25px;
+        border-left: 1px solid rgba(0, 0, 0, 0.07);
+        margin-left: -1px;
         .panel-white{
             border: none !important;
         }
