#10729 layout hard coded size removed

--- a/templates/emails/base_email_v2.jade
+++ b/templates/emails/base_email_v2.jade
@@ -87,7 +87,7 @@ html
                           table.device-width(align='center', width='100%', cellpadding='0', cellspacing='0', border='0', style='border-collapse: collapse;background-color:'+component.bg.color+';')
                             tr
                               td.wrapper(width='100%')
-                                  table.device-width(width='680', cellpadding='0', cellspacing='0', border='0', style='border-collapse: collapse;')
+                                  table.device-width(width='100%', cellpadding='0', cellspacing='0', border='0', style='border-collapse: collapse;')
                                     tr
                                       td.device-width(width='100%')
                                         table.device-width(width='100%', cellpadding='0', cellspacing='0', border='0', style='border-collapse: collapse;')
@@ -183,7 +183,7 @@ html
 
                 |    <tr>
                 |        <td>
-                |            <table align="center" border="0" cellpadding="0" cellspacing="0" width="680" id="templateColumns">
+                |            <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" id="templateColumns">
                 |                <tr>
                 |                    <td align="center" width="100%" class="templateColumnContainer" style="padding-left:20px; padding-right: 20px;">
                 |                        <table border="0" cellpadding="10" cellspacing="0" width="100%" style="color: !{component.txtcolor};">
