--- a/public/less/sections/customers.less
+++ b/public/less/sections/customers.less
@@ -215,11 +215,11 @@
                 border-radius: 6px;
                 background:#47b2d1;
             }
-            &:last-child{
-                border-left:none;
-                &:after {
+            &:first-child:after {
                     background:#04e261;
-                }
+            }
+            &:last-child{
+                border-left:none; 
             }
         }
       }
