#9028 hero-7 bank image issue

--- a/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-hero.less
@@ -322,7 +322,9 @@
 
 
     .ssb-page-section-layout-hero-v7 [testimonials-component] {
-
+        .img.component-slider-image.blank-img{
+            height: 300px;
+        }
         div.title {
             display: none;
         }
