chanes for #8387 feature-list#7

--- a/public/components/feature-list_v7.html
+++ b/public/components/feature-list_v7.html
@@ -7,7 +7,7 @@
     </div>
     <div class="features-wrap">
         <indi-accordion>
-            <div ng-repeat="feature in component.features" class="feature">
+            <div ng-repeat="feature in component.features" class="feature" ng-if="component.features.length > 0">
                 <a class="accordion" ng-class="{'active': $index == 0}">
                     <span class="fa fa-plus-square accordion-button" ng-attr-style="{{accordionIconColor(component)}}"></span>
                     <span class="fa fa-minus-square accordion-button" ng-attr-style="{{accordionIconColor(component)}}">
@@ -30,5 +30,10 @@
             <div class="clearfix margin-top-10"></div>
             </div>
         </indi-accordion>
-    </div>        
+        <div ng-show="component.features.length == 0" class="list-features col-md-4">
+             <a ng-click="addFeatureList(0)" class="center btn btn-primary btn-lg btn-wide btn-o add-feature"> <i class="fa fa-plus"></i>
+              Add New Feature
+             </a>
+         </div>
+    </div>
 </div>
