--- a/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
+++ b/public/admin/assets/js/ssb-site-builder/ssb-site-builder.component.html
@@ -111,13 +111,13 @@
 }
 
 
-  #ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [testimonials-component] .slick-dots li button:before, #ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [image-gallery-component] .slick-dots li button:before, #ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li button:before {
+#ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [testimonials-component] .slick-dots li button:before, #ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [image-gallery-component] .slick-dots li button:before, #ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li button:before {
     color: {{vm.state.website.themeOverrides.styles.primarySliderDotColor}};
     opacity: {{vm.state.website.themeOverrides.styles.primarySliderDotColorOpacity}} !important;
 }
 
 
-.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [testimonials-component] .slick-dots li.slick-active button:before, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [image-gallery-component] .slick-dots li.slick-active button:before, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li.slick-active button:before {
+#ssb-main.ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [testimonials-component] .slick-dots li.slick-active button:before, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout [image-gallery-component] .slick-dots li.slick-active button:before, .ssb-theme-{{vm.state.website.theme.handle}} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li.slick-active button:before {
     color: {{vm.state.website.themeOverrides.styles.primarySliderActiveDotColor}};
 }
 
