--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -148,7 +148,7 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
         }
 
 
-        .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [testimonials-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [image-gallery-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li.slick-active button:before {
+         #ssb-main.ssb-theme-#{account.website.theme.handle} .ssb-section-layout [testimonials-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [image-gallery-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li.slick-active button:before {
             color: #{account.website.themeOverrides.styles.primarySliderActiveDotColor};
         }
 
