--- a/public/admin/assets/views/customers.html
+++ b/public/admin/assets/views/customers.html
@@ -1,15 +1,15 @@
-<div class="customers" ng-controller="CustomersCtrl">
+<div class="customers server-side-pagination-container" ng-controller="CustomersCtrl">
     <section id="page-title" class="padding-top-15 padding-bottom-15">
         <div class="row">
             <div class="col-sm-8">
                 <h1 class="mainTitle" translate="sidebar.nav.customers.MAIN"></h1>
                 <span ng-if="showCustomers" class="mainDescription">
                     <span ng-if="customers.length>0" >
-                        <widget-header-label  count="{{customers.length}}"
-                                item="customer"></widget-header-label>
+                        <widget-header-label count="{{totalItemCount}}"
+                            item="customer"></widget-header-label>
                         </span>
                         <span
-                          ng-if="!customers" >No customers</span>.<span ng-if="showFilteredRecords()"> ({{filteredCollection.length || 0 | number : 0}} in filtered view)</span>
+                          ng-if="!customers" >No customers</span>.<span ng-if="showFilteredRecords()"> ({{customerCount || 0 | number : 0}} in filtered view)</span>
                     </span>
                 <span ng-if="!showCustomers" class="mainDescription">
                 Loading customers...
@@ -17,7 +17,7 @@
             </div>
         </div>
     </section>
-    <div st-table="displayedCustomers" st-sort-table st-safe-src="customers" st-filtered-collection>
+    <div st-table="displayedCustomers" st-safe-src="customers">
         <div class="container-fluid container-fullw bg-white padding-top-0 padding-bottom-0">
             <div class="row">
                 <div class="col-sm-12">
@@ -29,7 +29,7 @@
                                         <div class="form-group">
                                             <div class="col-xs-6 col-md-6 padding-left-0 padding-right-30">
                                                 <span class="input-icon">
-                                                    <input type="text" st-search placeholder="Search by name, email, phone..." id="form-field-14" class="form-control">
+                                                    <input type="text" ng-model="pagingParams.globalSearch" placeholder="Search by name, email, phone..." id="form-field-14" class="form-control">
                                                     <i class="ti-search"></i>
                                                 </span>
                                             </div>
@@ -125,7 +125,7 @@
                                     <div class="col-xs-12 padding-0">
                                         <div class="col-xs-7">
                                             <span class="input-icon">
-                                                <input type="text" st-search placeholder="Search by name, email, phone..." id="form-field-14" class="form-control">
+                                                <input type="text" ng-model="pagingParams.globalSearch" placeholder="Search by name, email, phone..." id="form-field-14" class="form-control">
                                                 <i class="ti-search"></i>
                                             </span>
                                         </div>
@@ -173,14 +173,14 @@
                         <thead ng-class="{'bg-white': tableView == 'grid'}" sticky offset="65" sticky-class="sticky-header-class">
                             <tr>
                                 <th ng-class="{'column-width': tableView == 'grid'}" ng-click='selectAllClickFn($event)' ng-show='displayedCustomers.length' class="check-col"><i class="fa fa-2x" ng-class='{"fa-check-circle": selectAllChecked, "fa-circle-o": !selectAllChecked}'></i></th>
-                                <th st-sort="_id" st-sort-default="reverse" ng-class="{'column-width': tableView == 'grid'}" class="id-col">ID</th>
-                                <th st-sort="subdomain" style="margin-top: 1px;" ng-class="{'column-width': tableView == 'grid'}" class="subdomain-col">Subdomain</th>
-                                <th class="hidden-xs customDomain-col" st-sort="customDomain" ng-show="column.customDomain" ng-class="{'column-width': tableView == 'grid'}">Custom Domain</th>
-                                <th class="hidden-xs signup-col" st-sort="billing.signupDate" ng-class="{'column-width': tableView == 'grid'}" style="white-space: nowrap;">Signup</th>
-                                <th class="hidden-xs trial-col" st-sort="getters.trialDays" ng-class="{'column-width': tableView == 'grid', 'tag-width': tableView == 'list'}" style="white-space: nowrap;">Trial Days</th>
-                                <th class="hidden-xs plan-col" st-sort="billing.plan" ng-class="{'column-width': tableView == 'grid'}">Plan</th>
-                                <th class="hidden-xs zip-col" st-sort="billing.details.zip" ng-class="{'column-width': tableView == 'grid'}">Postcode</th>
-                                <th class="hidden-xs state-col" st-sort="billing.details.state" ng-class="{'column-width': tableView == 'grid'}">State</th>
+                                <th class="id-col sort" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['_id'].direction === 1, 'st-sort-descent': sortData.details['_id'].direction === -1}" ng-click="sortCustomers('_id', '_id')">ID</th>
+                                <th style="margin-top: 1px;" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['subdomain'].direction === 1, 'st-sort-descent': sortData.details['subdomain'].direction === -1}" ng-click="sortCustomers('subdomain', 'subdomain')" class="sort subdomain-col">Subdomain</th>
+                                <th class="hidden-xs customDomain-col sort" st-sort="customDomain" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['customDomain'].direction === 1, 'st-sort-descent': sortData.details['customDomain'].direction === -1}" ng-click="sortCustomers('customDomain', 'customDomain')">Custom Domain</th>
+                                <th class="hidden-xs signup-col sort" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['signupDate'].direction === 1, 'st-sort-descent': sortData.details['signupDate'].direction === -1}" ng-click="sortCustomers('billing.signupDate', 'signupDate')" style="white-space: nowrap;">Signup</th>
+                                <th class="hidden-xs trial-col" ng-class="{'column-width': tableView == 'grid', 'tag-width': tableView == 'list'}" style="white-space: nowrap;">Trial Days</th>
+                                <th class="hidden-xs plan-col sort" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['plan'].direction === 1, 'st-sort-descent': sortData.details['plan'].direction === -1}" ng-click="sortCustomers('billing.plan', 'plan')">Plan</th>
+                                <th class="hidden-xs zip-col" ng-class="{'column-width': tableView == 'grid'}">Postcode</th>
+                                <th class="hidden-xs state-col" ng-class="{'column-width': tableView == 'grid'}">State</th>
                                 <!-- <th class="hidden-xs" st-sort="getters.modified" ng-show="column.modified">Modified</th> -->
                             </tr>
                             <tr ng-if="showFilter" class="customer-filter-header">
@@ -188,13 +188,13 @@
 
                                 </th>
                                 <th class="column-width id-col">
-                                    <input st-search="_id" placeholder="ID" class="form-control" type="search" />
+                                    <input ng-model="pagingParams.fieldSearch._id" placeholder="ID" class="form-control" ng-model-options="{ debounce: 800 }" />
                                 </th>
                                 <th class="column-width subDomain-col">
-                                    <input st-search="subdomain" placeholder="Subdomain" class="form-control" type="search" />
+                                    <input ng-model="pagingParams.fieldSearch.subdomain" placeholder="Subdomain" class="form-control" ng-model-options="{ debounce: 800 }" />
                                 </th>
                                 <th class="column-width customDomain-col hidden-xs">
-                                    <input st-search="customDomain" placeholder="Custom Domain" class="form-control" type="search" />
+                                    <input ng-model="pagingParams.fieldSearch.customDomain" placeholder="Custom Domain" class="form-control" ng-model-options="{ debounce: 800 }" />
                                 </th>
                                 <th class="hidden-xs signup-col"></th>
                                 <th class="hidden-xs trial-col"></th>
@@ -221,16 +221,28 @@
                             </tr>
                         </tbody>
                         <tfoot>
+                            <tfoot>
                             <tr>
-                                <td class="text-center" st-custom-pagination="" st-displayed-pages="showPages" st-items-by-page="itemPerPage" colspan="9">
+                                <td class="text-center" colspan="10">
+                                    <nav ng-if="numberOfPages() && pages.length >= 2">
+                                        <ul class="pagination">
+                                            <li ng-repeat="page in pages" ng-class="{active: page == pagingParams.curPage}">
+                                                <a ng-click="selectPage(page)" class="ng-binding">{{page}}</a>
+                                            </li>
+                                        </ul>
+                                    </nav>
                                 </td>
                             </tr>
+                        </tfoot>
                         </tfoot>
                     </table>
                     <div class="load1 csspinner height-400" ng-show="!showCustomers"></div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="custom-paging-overlay center" ng-if="pageLoading">
+        <h1>loading...</h1>
     </div>
 </div>
 <div data-ng-include=" 'assets/views/partials/new-customer-modal.html' "></div>
