--- a/public/less/frontend/components/testimonials-v2.less
+++ b/public/less/frontend/components/testimonials-v2.less
@@ -106,7 +106,7 @@
   .slick-dots {
 
     bottom: -15px;
-    position: relative;
+    //position: relative;
 
     @media screen and (min-width: 768px) {
         width:100%;
@@ -123,7 +123,7 @@
 
   .testimonial-wrap.editing .slick-dots {
     margin-bottom: 25px;
-    position: relative;
+    //position: relative;
   }
 
   .carousel-indicators {
