--- a/public/admin/assets/views/customers.html
+++ b/public/admin/assets/views/customers.html
@@ -19,150 +19,49 @@
     </section>
     <div st-table="displayedCustomers" st-safe-src="customers">
         <div class="container-fluid container-fullw bg-white padding-top-0 padding-bottom-0">
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="panel panel-transparent row margin-bottom-0">
-                        <div class="panel-body">
-                            <form role="form" class="ng-pristine ng-valid row">
-                                <div class="hidden-xs">
-                                    <div class="col-xs-12 col-sm-6">
-                                        <div class="form-group">
-                                            <div class="col-xs-6 col-md-6 padding-left-0 padding-right-30">
-                                                <span class="input-icon">
-                                                    <input type="text" ng-model="pagingParams.globalSearch" placeholder="Search by name, email, phone..." id="form-field-14" class="form-control">
-                                                    <i class="ti-search"></i>
-                                                </span>
-                                            </div>
-                                            <div class="col-xs-3 col-md-3 padding-right-0">
-                                                <button type="button" class="btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-filter ng-click-active pull-right" ng-click="filterCustomers()">
-                                                    <span>Filter</span>
-                                                </button>
-
-                                            </div>
-                                            <div class="col-xs-3 col-md-3 padding-right-0">
-                                                <button type="button" class="libtn btn btn-warning btn-wide btn-scroll btn-scroll-top ti ti-plus addnew" ng-click="clearCustomerModal();openSimpleModal('new-customer-modal')">
-                                                    <span class="desktop-text">New</span>
-                                                </button>
-                                            </div>
-                                            <div class="col-xs-3 col-md-3 padding-right-0 hidden">
-                                                <ui-select ng-model="bulkActionChoice.action" on-select="bulkActionSelectFn()" theme="bootstrap" ng-disabled='!(selectedContactsFn()).length'>
-                                                    <ui-select-match placeholder="Actions">
-                                                        <small ng-bind-html="$select.selected.label"></small>
-                                                    </ui-select-match>
-                                                    <ui-select-choices repeat="action in bulkActionChoices |  orderBy:'label' | filter: $select.search">
-                                                        <small ng-bind-html="action.label | highlight: $select.search"></small>
-                                                    </ui-select-choices>
-                                                </ui-select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="visible-xs clearfix margin-bottom-15"></div>
-                                    <div class="col-xs-12 col-sm-6 row margin-bottom-0 pull-right">
-
-
-                                        <div class="form-group margin-bottom-0 margin-right-5 pull-right hidden">
-                                            <button type="button" class="btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-import" ng-click="exportContactsFn()">
-                                                <span>Export</span>
-                                            </button>
-                                        </div>
-                                        <div class="form-group margin-bottom-0 margin-right-5 pull-right hidden">
-                                            <button type="button" class="btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-import" ng-click="openModal('contact-templates')">
-                                                <span>Templates</span>
-                                            </button>
-                                        </div>
-                                        <div class="button-group pull-right margin-right-5 hidden">
-                                            <span class="dropdown" dropdown on-toggle="toggled(open)">
-                                            <p class="margin-bottom-0">
-                                            <button type="button" class="btn btn-wide btn-info btn-o dropdown-toggle" dropdown-toggle ng-disabled="disabled">
-                                                Columns <span class="caret"></span>
-                                            </button>
-                                            </p>
-                                            <ul class="dropdown-menu">
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.photo" ng-click="preventClick($event)" /> Photo</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.name" ng-click="preventClick($event)" /> Name</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.category" ng-click="preventClick($event)" /> Category</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.email" ng-click="preventClick($event)" /> Email</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.address" ng-click="preventClick($event)" /> Address</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.social" ng-click="preventClick($event)" /> Social</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.created" ng-click="preventClick($event)" /> Created</span>
-                                                </li>
-                                                <li>
-                                                    <span class="small">
-                                                    <input type="checkbox" ng-model="column.modified" ng-click="preventClick($event)" /> Modified</span>
-                                                </li>
-                                            </ul>
-                                            </span>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="btn-group tableView">
-                                                <button class="btn btn-info" ng-class="{'active': tableView == 'list'}" href="" ng-click="tableView = 'list'" tooltip-placement="top" tooltip="List"> <span class="fa fa-th-list"></span> </button>
-                                                <button class="btn btn-info" ng-class="{'active': tableView == 'grid'}" href="" ng-click="tableView = 'grid'" tooltip-placement="top" tooltip="Grid"> <span class="fa fa-th"></span> </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="visible-xs">
-                                    <div class="col-xs-12 padding-0">
-                                        <div class="col-xs-7">
-                                            <span class="input-icon">
-                                                <input type="text" ng-model="pagingParams.globalSearch" placeholder="Search by name, email, phone..." id="form-field-14" class="form-control">
-                                                <i class="ti-search"></i>
-                                            </span>
-                                        </div>
-                                        <div class="col-xs-5">
-                                            <button type="button" class="btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-filter ng-click-active pull-right" ng-click="filterCustomers()">
-                                                <span>Filter</span>
-                                            </button>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-xs-12 padding-0 padding-top-10">
-                                        <div class="col-xs-4 hidden">
-                                                <button type="button" style="min-width:60px;" class="btn btn-o btn-info ti-export margin-left-5 ng-click-active" ng-click="exportContactsFn()">
-                                                </button>
-                                        </div>
-                                        <div class="form-group col-xs-8 hidden">
-                                            <ui-select ng-model="bulkActionChoice.action" on-select="bulkActionSelectFn()" theme="bootstrap" ng-disabled='!(selectedContactsFn()).length'>
-                                                <ui-select-match placeholder="Actions">
-                                                    <small ng-bind-html="$select.selected.label"></small>
-                                                </ui-select-match>
-                                                <ui-select-choices repeat="action in bulkActionChoices |  orderBy:'label' | filter: $select.search">
-                                                    <small ng-bind-html="action.label | highlight: $select.search"></small>
-                                                </ui-select-choices>
-                                            </ui-select>
-                                        </div>
-
-                                        <div class="form-group col-xs-12">
-                                            <div class="btn-group tableView">
-                                                <button class="btn btn-info" ng-class="{'active': tableView == 'list'}" href="" ng-click="tableView = 'list'" tooltip-placement="top" tooltip="List"> <span class="fa fa-th-list"></span> </button>
-                                                <button class="btn btn-info" ng-class="{'active': tableView == 'grid'}" href="" ng-click="tableView = 'grid'" tooltip-placement="top" tooltip="Grid"> <span class="fa fa-th"></span> </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+            <div class="col-sm-12">
+                <div class="panel panel-transparent row margin-bottom-0 btn-area-res">
+                    <div class="panel-body padding-left-0 padding-right-0">
+                        <div class="mob-row">
+                            <div class="fix-btn-1 padding-0">
+                                    <span class="input-icon">
+                                        <input type="text" ng-model="pagingParams.globalSearch" ng-model-options="{ debounce: 800 }" placeholder="Search " id="form-field-14" class="form-control">
+                                        <i class="ti-search"></i>
+                                    </span>
+                            </div>
+                            <div class="fix-btn padding-0 mob-sub-right">
+                                <button type="button" class="libtn btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-filter ng-click-active " ng-click="filterCustomers()">
+                                    <span>Filter</span>
+                                </button>
+                            </div>
                         </div>
+                        <div class="mob-row">
+                            <div class="mob-sub-row row-1">
+                                
+                                <div class="fix-btn padding-0 btn-2">
+                                    <button type="button" class="libtn btn export_btn ti-export" ng-class="{'export_btn_select':(selectedCustomersFn()).length}" ng-click="exportCustomersFn()">
+                                               <span class="desktop-text" ng-bind-html='exportText'></span>
+                                               <span class="mobile-text">Export</span>
+                                   </button>
+                                </div>
+                            </div>
+                            <div class="mob-sub-row padding-0 text-right  text-right " style="display: inline-block;float: right;">
+                                <div class="fix-btn grp padding-0 " >
+                                    <div class="btn-group ">
+                                        <button class="btn btn-info" ng-class="{'active': tableView == 'list'}" href="" ng-click="tableView = 'list'" tooltip-placement="top" tooltip="List"> <span class="fa fa-th-list"></span> </button>
+                                        <button class="btn btn-info right-round" ng-class="{'active': tableView == 'grid'}" href="" ng-click="tableView = 'grid'" tooltip-placement="top" tooltip="Grid"> <span class="fa fa-th"></span> </button>
+                                    </div>
+                                </div>
+                                <div class="fix-btn padding-0">
+                                    <button type="button" class="libtn btn btn-warning ti ti-plus addnew" ng-click="openSimpleModal('new-customer-modal')">
+                                        <span class="desktop-text">New</span>
+                                        <span class="mobile-text">New</span>
+                                    </button>
+                                </div>
+                             </div>
+                        </div>                        
                     </div>
+                    <!--panel  ends here-->
                 </div>
             </div>
         </div>
