--- a/templates/snippets/index_head_scripts.jade
+++ b/templates/snippets/index_head_scripts.jade
@@ -141,14 +141,13 @@ if (typeof account.website.theme !== 'undefined' && typeof account.website.theme
             border: 1px solid #{account.website.themeOverrides.styles.primaryBtnTextColor};
         }
 
-
-        #ssb-main.ssb-theme-#{account.website.theme.handle} .ssb-section-layout [testimonials-component] .slick-dots li button:before,#ssb-main.ssb-theme-#{account.website.theme.handle} .ssb-section-layout [image-gallery-component] .slick-dots li button:before, #ssb-main.ssb-theme-#{account.website.theme.handle} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li button:before {
+        .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [testimonials-component] .slick-dots li button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [image-gallery-component] .slick-dots li button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li button:before {
             color: #{account.website.themeOverrides.styles.primarySliderDotColor};
-            opacity: #{account.website.themeOverrides.styles.primarySliderDotColorOpacity} !important;
+            opacity: #{account.website.themeOverrides.styles.primarySliderDotColorOpacity} ;
         }
 
 
-         #ssb-main.ssb-theme-#{account.website.theme.handle} .ssb-section-layout [testimonials-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [image-gallery-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout .ssb-blog-featured-slider .slick-dots li.slick-active button:before {
+        .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [testimonials-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout [image-gallery-component] .slick-dots li.slick-active button:before, .ssb-theme-#{account.website.theme.handle} .ssb-section-layout .ssb-blog-featured-slider ul.slick-dots li.slick-active button:before {
             color: #{account.website.themeOverrides.styles.primarySliderActiveDotColor};
         }
 
