--- a/public/less/sections/customers.less
+++ b/public/less/sections/customers.less
@@ -180,12 +180,12 @@
                 height: 10px;
                 border-radius: 6px;
                 background:#47b2d1;
-            }
-            &:first-child:after {
-                    background:#04e261;
-            }
+            } 
             &:last-child{
                 border-left:none; 
+                &:after {
+                    background:#04e261;
+                } 
             }
         }
       }
