--- a/public/admin/assets/views/customers.html
+++ b/public/admin/assets/views/customers.html
@@ -68,10 +68,10 @@
         <div class="container-fluid container-fullw padding-top-0 padding-bottom-0 padding-left-15 padding-right-15">
             <div class="panel panel-transparent row margin-bottom-0">
                 <div class="panel-body customer-panel-body padding-top-0">
-                    <table class="table table-striped table-hover bg-white margin-bottom-0" ng-class="{'grid': tableView == 'grid', 'bg-white table-list-view': tableView == 'list'}" ng-show="displayedCustomers" fixed-header-table>
+                    <table class="table table-striped table-hover bg-white margin-bottom-0" ng-class="{'grid': tableView == 'grid', 'bg-white table-list-view': tableView == 'list'}" ng-show="customers.length" fixed-header-table>
                         <thead ng-class="{'bg-white': tableView == 'grid'}" sticky offset="65" sticky-class="sticky-header-class">
                             <tr>
-                                <th ng-class="{'column-width': tableView == 'grid'}" ng-click='selectAllClickFn($event)' ng-show='displayedCustomers.length' class="check-col"><i class="fa fa-2x" ng-class='{"fa-check-circle": selectAllChecked, "fa-circle-o": !selectAllChecked}'></i></th>
+                                <th ng-class="{'column-width': tableView == 'grid'}" ng-click='selectAllClickFn($event)' ng-show='customers.length' class="check-col"><i class="fa fa-2x" ng-class='{"fa-check-circle": selectAllChecked, "fa-circle-o": !selectAllChecked}'></i></th>
                                 <th class="id-col sort" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['_id'].direction === 1, 'st-sort-descent': sortData.details['_id'].direction === -1}" ng-click="sortCustomers('_id', '_id')">ID</th>
                                 <th style="margin-top: 1px;" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['subdomain'].direction === 1, 'st-sort-descent': sortData.details['subdomain'].direction === -1}" ng-click="sortCustomers('subdomain', 'subdomain')" class="sort subdomain-col">Subdomain</th>
                                 <th class="hidden-xs customDomain-col sort" st-sort="customDomain" ng-class="{'column-width': tableView == 'grid', 'st-sort-ascent': sortData.details['customDomain'].direction === 1, 'st-sort-descent': sortData.details['customDomain'].direction === -1}" ng-click="sortCustomers('customDomain', 'customDomain')">Custom Domain</th>
@@ -82,8 +82,8 @@
                                 <th class="hidden-xs state-col" ng-class="{'column-width': tableView == 'grid'}">State</th>
                                 <!-- <th class="hidden-xs" st-sort="getters.modified" ng-show="column.modified">Modified</th> -->
                             </tr>
-                            <tr ng-if="showFilter" class="customer-filter-header">
-                                <th class="column-width check-col" ng-if="displayedCustomers.length">
+                            <tr ng-if="pagingParams.showFilter" class="filter-row-header sticky-filter-header">
+                                <th class="column-width check-col" ng-if="customers.length">
 
                                 </th>
                                 <th class="column-width id-col">
@@ -103,8 +103,8 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="customer in displayedCustomers" ng-click="viewSingle(customer)">
-                                <td ng-show='displayedCustomers.length' class="check-col"><i class="fa fa-2x" ng-click='customerSelectClickFn($event, customer)' ng-class='{"fa-check-circle": customer.isSelected, "fa-circle-o": !customer.isSelected}'></i></td>
+                            <tr ng-repeat="customer in customers track by $index" ng-click="viewSingle(customer)">
+                                <td ng-show='customers.length' class="check-col"><i class="fa fa-2x" ng-click='customerSelectClickFn($event, customer)' ng-class='{"fa-check-circle": customer.isSelected, "fa-circle-o": !customer.isSelected}'></i></td>
                                 <td ng-if="tableView == 'grid'" class="id-col"><span style="display:inline-block;line-height:50px;"><img ng-src="{{ customer.business.logo }}" id="business_photo_{{customer.business.logo}}" err-src="/admin/assets/images/default-user.png" is-contact="contact" err-contact="contact" class="customer-business-logo" alt="image"></span></td>
                                 <td class="id-col"><strong>ID: </strong>{{customer._id}}</td>
                                 <td class="text-adjust-col subDomain-col"><strong>Subdomain: </strong>{{customer.subdomain}}</td>
