--- a/public/less/ssb-site-builder/ssb-site-builder.less
+++ b/public/less/ssb-site-builder/ssb-site-builder.less
@@ -412,7 +412,11 @@
             pointer-events: none;
         }
     }
-
+    .ssb-page-section-testimonials{
+        ul.slick-dots{
+            position: relative;
+        }
+    }
     .ssb-active-component {
         &:before {
             z-index: 2;
