Customers 'Filter' button not working

--- a/public/admin/assets/views/customers.html
+++ b/public/admin/assets/views/customers.html
@@ -30,7 +30,7 @@
                                     </span>
                             </div>
                             <div class="fix-btn padding-0 mob-sub-right">
-                                <button type="button" class="libtn btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-filter ng-click-active " ng-click="filterCustomers()">
+                                <button type="button" class="libtn btn btn-o btn-info btn-wide btn-scroll btn-scroll-top ti-filter ng-click-active " ng-click="showFilter()">
                                     <span>Filter</span>
                                 </button>
                             </div>
