#10746 12 btn issue for email

--- a/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
+++ b/public/less/ssb-site-builder/ssb-components/ssb-theme-btn.less
@@ -360,6 +360,7 @@
         padding: 6px 20px;
         text-decoration: none;
         background-color: @ssb-theme-btn-style-12-bg-color;
+        border-color: #48b1cc;
         &:hover {
             background-color: lighten(@ssb-theme-btn-style-12-bg-color, 8%)!important;
 
