--- a/public/less/ssb-site-builder/ssb-froala.less
+++ b/public/less/ssb-site-builder/ssb-froala.less
@@ -168,7 +168,7 @@ ssb-topbar #ssb-froala-scrollable-container {
     }
     .fr-popup .fr-action-buttons{
       padding: 5px;
-      height: unset !important;
+      height: initial !important;
       min-width: 36px;
     }
     .fr-video-embed-layer .fr-action-buttons{
