Adapt New Platform templates - new org

--- a/templates/var/newplatform/admin.jade
+++ b/templates/var/newplatform/admin.jade
@@ -15,7 +15,7 @@ html(lang='en', data-ng-app='indigenousApp', class="light-admin-chrome")
         meta(name='HandheldFriendly', content='true')
         meta(name='apple-touch-fullscreen', content='yes')
         link(rel="shortcut icon", href='assets/var/leadsource/images/leadsource-logo.png')
-        title(data-ng-bind='pageTitle()') LeadSource Admin
+        title(data-ng-bind='pageTitle()') New Platform Admin
         // Bootstrap
         link(rel='stylesheet', href='../js/libs/bootstrap/dist/css/bootstrap.min.css')
         // Font Awesome
