Replace logo in New Platform, w/ TrustX logo

--- a/public/admin/assets/var/newplatform/views/partials/top-navbar.html
+++ b/public/admin/assets/var/newplatform/views/partials/top-navbar.html
@@ -5,7 +5,7 @@
         <i class="ti-align-justify"></i>
     </a>
     <a class="navbar-brand hidden-md hidden-lg" ui-sref="app.dohy" style="padding:25px 15px;">
-        <img ng-src="{{app.layout.logo}}" alt="{{app.name}}" class="pull-left" style="width:250px;" /> <p class="pull-left margin-bottom-0 margin-top-5" style="margin-left:10px;font-size:10px;line-height: 1;"></p>
+        <img ng-src="{{app.layout.logo}}" alt="{{app.name}}" class="pull-left" /> <p class="pull-left margin-bottom-0 margin-top-5" style="margin-left:10px;font-size:10px;line-height: 1;"></p>
     </a>
     <a href="javascript:void(0)" class="sidebar-toggler pull-right visible-md visible-lg" ng-click="app.layout.isSidebarClosed = !app.layout.isSidebarClosed">
         <i class="ti-align-justify"></i>
