Set favicon for newplatform

--- a/templates/var/newplatform/admin.jade
+++ b/templates/var/newplatform/admin.jade
@@ -14,7 +14,7 @@ html(lang='en', data-ng-app='indigenousApp', class="light-admin-chrome")
         meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
         meta(name='HandheldFriendly', content='true')
         meta(name='apple-touch-fullscreen', content='yes')
-        link(rel="shortcut icon", href='assets/var/leadsource/images/leadsource-logo.png')
+        link(rel="shortcut icon", href='//s3.amazonaws.com/indigenous-digital-assets/test_account_3043/x_fav_1516228240275.ico')
         title(data-ng-bind='pageTitle()') New Platform Admin
         // Bootstrap
         link(rel='stylesheet', href='../js/libs/bootstrap/dist/css/bootstrap.min.css')
