#10508 Added basic structure

--- a/public/less/sections/contact-detail.less
+++ b/public/less/sections/contact-detail.less
@@ -45,7 +45,7 @@
     display: block !important;
 }
 
-contact-details-component{
+contact-details-component, anonymous-contact-details-component{
     .container-fullw{
         border-bottom: none !important;
     }
