--- a/templates/snippets/admin_body_scripts.jade
+++ b/templates/snippets/admin_body_scripts.jade
@@ -291,6 +291,10 @@ script(src='/admin/assets/js/contact-details/contact-details.controller.js')
 script(src='/admin/assets/js/contact-details/activity/contact-activity.component.js')
 script(src='/admin/assets/js/contact-details/activity/contact-activity.controller.js')
 
+//- Anonymous Contact details
+
+script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-details.component.js')
+script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-details.controller.js')
 
 
 //- Site Analytics
