Link Contact Detail (Activity) to Order Detail, when activity includes order #10767

--- a/public/admin/assets/js/contact-details/activity/contact-activity.component.html
+++ b/public/admin/assets/js/contact-details/activity/contact-activity.component.html
@@ -310,7 +310,7 @@
 		                        		</div>
 	                                    <div class="col-xs-12 content-data">
 	                                       An order created with Order Id
-	                                        <span class="text-bold">'{{activity.extraFields.orderId}}'</span>
+	                                        <span class="text-bold"><a href="#/commerce/orders/{{activity.extraFields._id}}" >'{{activity.extraFields.orderId}}'</a></span>
 	                                    </div>
 	                                    <div class="clearfix"></div>
 	                                </div>
@@ -323,7 +323,7 @@
 		                        		</div>
 	                                    <div class="col-xs-12 content-data">
 	                                       An order created with Order Id
-	                                        <span class="text-bold">'{{activity.extraFields.orderId}}'</span>
+	                                        <span class="text-bold"><a href="#/commerce/orders/{{activity.extraFields._id}}" >'{{activity.extraFields.orderId}}'</a></span>
 	                                    </div>
 	                                    <div class="clearfix"></div>
 	                                </div>
