List view (of all fingerprints) for a specific account #10508

--- a/templates/snippets/admin_body_scripts.jade
+++ b/templates/snippets/admin_body_scripts.jade
@@ -297,6 +297,10 @@ script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-details
 script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-details.controller.js')
 
 
+//- Site Traffic
+
+script(src='/admin/assets/js/traffic/site-traffic/site-traffic.component.js')
+
 //- Site Analytics
 script(src="/admin/assets/js/site-analytics/site-analytics.service.js")
 
