--- a/public/less/frontend/components/navbar-v2.less
+++ b/public/less/frontend/components/navbar-v2.less
@@ -77,6 +77,7 @@
             margin: 5px auto;
             max-width: 500px;
             text-align: center;
+            width: 100%;
             img:not(.fr-dii) {
                 margin: 0 auto;
                 display: block;
