--- a/public/less/frontend/components/navbar-v1.less
+++ b/public/less/frontend/components/navbar-v1.less
@@ -204,7 +204,7 @@ ul.nav {
         li{
             border-bottom: 4px solid transparent;
         }
-    }  
+    }
     .ssb-wrap-left-fixed-left-nav ul.nav-sub-menu{
         width: 100%;
     }
@@ -223,8 +223,11 @@ ul.nav {
         background: transparent;
         li{
             border-bottom: 4px solid transparent;
-        } 
+        }
     }
+}
+.ssb-wrap-left-fixed-left-nav {
+   .navigation-v1 .navbar-right{ margin-right: 0;}
 }
 .overflow_visible{
     overflow: visible !important;
@@ -233,7 +236,7 @@ ul.nav {
 .overflow_visible.unset{
      z-index: unset;
 }
-.ssb-layout__header_2-col_footer.ssb-page-blog-list .ssb-wrap-left-fixed-left-nav{ 
+.ssb-layout__header_2-col_footer.ssb-page-blog-list .ssb-wrap-left-fixed-left-nav{
     .overflow_visible{
         overflow: auto !important;
         z-index: 10;
@@ -261,7 +264,7 @@ ul.nav.navbar-nav{
             }
         }
     }
-} 
+}
 .overflow_visible-without-index{
     overflow: visible !important;
 }
