--- a/public/less/styles.less
+++ b/public/less/styles.less
@@ -100,6 +100,7 @@
 @import "sections/common-button.less";
 @import 'sections/contacts.less';
 @import 'sections/orders.less';
+@import 'sections/fingerprints.less';
 @import 'sections/adjustment-text.less';
 @import 'sections/choose-account.less';
 @import 'mediamanager/media-manager.less';
