#10508 added anonymous contact details and activity details

--- a/public/admin/assets/js/contact-details/anonymous/anonymous-contact-details.component.html
+++ b/public/admin/assets/js/contact-details/anonymous/anonymous-contact-details.component.html
@@ -425,7 +425,7 @@
         </div>
         <!-- contact timeline/notes pane -->
         <div class="col-xs-12 col-sm-6 contact-details-right-pane">
-            <contact-activity-component contact-id="vm.state.contactId" contact="vm.state.contact" ng-if="vm.state.contact" contact-device-details="vm.state.contactDeviceDetails" contact-session-details="vm.state.contactSessionDetails" contact-attribution-details="vm.state.contactAttributionDetails"></contact-activity-component>
+            <anonymous-contact-activity-component fingerprint-id="vm.state.fingerprintId" anonymous-contact-device-details="vm.state.anonymousContactDeviceDetails" anonymous-contact-session-details="vm.state.anonymousContactSessionDetails" anonymous-contact-attribution-details="vm.state.anonymousContactAttributionDetails"></anonymous-contact-activity-component>
         </div>
         <div class="clearfix"></div>
     </div>
