--- a/templates/snippets/admin_body_scripts.jade
+++ b/templates/snippets/admin_body_scripts.jade
@@ -294,7 +294,7 @@ script(src='/admin/assets/js/contact-details/activity/contact-activity.controlle
 //- Anonymous Contact details
 
 script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-details.component.js')
-script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-details.controller.js')
+script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-activity/anonymous-contact-activity.component.js')
 
 
 //- Site Traffic
