--- a/public/components/feature-list_v6.html
+++ b/public/components/feature-list_v6.html
@@ -7,7 +7,7 @@
     <div class="row features-wrap feature-list-container" ng-init="setSelectedFeatureIndex(0)">
         <ul class="list-features list-features-{{component._id}} col-sm-4" ng-show="component.features.length != 0">
 
-            <li class="feature" ng-attr-style="{{listStyles(component, $index == features.featureIndex)}}" ng-repeat="feature in component.features" ng-click="setSelectedFeatureIndex($index)" ng-class="{'active': $index == features.featureIndex}">
+            <li class="feature" ng-attr-style="{{listStyles(component, $index == features.featureIndex)}}" ng-repeat="feature in component.features" ng-click="setSelectedFeatureIndex($index, component._id)" ng-class="{'active': $index == features.featureIndex}">
                 <a class="feature-heading" ng-attr-style="{{setStyles(component.formSettings)}}">
                     <div class="fetaure-tabs-icon">
                         <div elem ng-model="feature.top"></div>
