--- a/public/admin/assets/var/am/views/partials/nav.html
+++ b/public/admin/assets/var/am/views/partials/nav.html
@@ -64,7 +64,7 @@
 				</a>
 			</li>
 			<li ui-sref-active="active">
-				<a ui-sref="app.website.traffic">
+				<a ui-sref="app.website.traffic" translate="sidebar.nav.website.TRAFFIC">
 					<span class="title"> Site Traffic </span>
 				</a>
 			</li>
@@ -116,6 +116,12 @@
             <li ui-sref-active="active">
                 <a ui-sref="app.customeranalytics">
                     <span class="title" translate="sidebar.nav.customers.ANALYTICS"> Analytics </span>
+                </a>
+            </li>
+
+            <li ui-sref-active="active">
+                <a ui-sref="app.customerTraffic">
+                    <span class="title" translate="sidebar.nav.customers.TRAFFIC"> Platform Traffic </span>
                 </a>
             </li>
             
