--- a/public/less/sections/fingerprints.less
+++ b/public/less/sections/fingerprints.less
@@ -8,3 +8,11 @@ site-traffic-component{
         }
     }
 }
+
+customer-traffic-component{
+    .table-list-view{
+        th, td{
+            width: 33.33%;
+        }
+    }
+}
