--- a/templates/var/leadsource/admin_body_scripts.jade
+++ b/templates/var/leadsource/admin_body_scripts.jade
@@ -301,6 +301,11 @@ script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-activit
 //- Site Traffic
 
 script(src='/admin/assets/js/traffic/site-traffic/site-traffic.component.js')
+
+//- Customer Traffic
+
+script(src='/admin/assets/js/traffic/customer-traffic/customer-traffic.component.js')
+
 //- Site Analytics
 script(src="/admin/assets/js/site-analytics/site-analytics.service.js")
 
