--- a/templates/var/newplatform/admin_body_scripts.jade
+++ b/templates/var/newplatform/admin_body_scripts.jade
@@ -302,6 +302,10 @@ script(src='/admin/assets/js/contact-details/anonymous/anonymous-contact-activit
 
 script(src='/admin/assets/js/traffic/site-traffic/site-traffic.component.js')
 
+//- Customer Traffic
+
+script(src='/admin/assets/js/traffic/customer-traffic/customer-traffic.component.js')
+
 //- Site Analytics
 script(src="/admin/assets/js/site-analytics/site-analytics.service.js")
 
